Prevent modal dialogs from locking up in Qt 5.

When choosing "Manage kits" from the wizard, the settings dialog
locks up when using Qt 5 since 2 modal dialogs execute on the
mainwindow.

Task-number: QTBUG-27206

Change-Id: I69b756fed48983ec7217452b2f6c3049a520f1c3
Reviewed-by: Oliver Wolff <oliver.wolff@digia.com>
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>